--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Varys</title>
+    <title>ChemSearch</title>
     <link rel="stylesheet" href="./build/animate.min.css" />
     <link rel="stylesheet" href="./build/main.css" />
 </head>
